Crash when typing negative numbers. #77289

Closed
opened 2020-06-03 01:42:15 +02:00 by Daniel Santana · 5 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-02 22:21, hash: 2e52b3206c
Worked: 2.83 Beta

Short description of error
Crash when typing negative numbers.

Exact steps for others to reproduce the error
Open blender.
Select Cube.
Press N.
Type -2.3m on any of the location coordinates. = Crash

Call Stack:

blender.exe!user_string_to_number(bContext * C, const unsigned char * str, const UnitSettings * unit, int type, double * r_value) Line 305
	at D:\dev\blender\blender\source\blender\editors\util\numinput.c(305)
blender.exe!ui_set_but_string_eval_num_unit(bContext * C, uiBut * but, const unsigned char * str, double * r_value) Line 2818
	at D:\dev\blender\blender\source\blender\editors\interface\interface.c(2818)
blender.exe!ui_but_string_set_eval_num(bContext * C, uiBut * but, const unsigned char * str, double * r_value) Line 2880
	at D:\dev\blender\blender\source\blender\editors\interface\interface.c(2880)
blender.exe!ui_but_string_set(bContext * C, uiBut * but, const unsigned char * str) Line 3030
	at D:\dev\blender\blender\source\blender\editors\interface\interface.c(3030)
blender.exe!ui_apply_but_NUM(bContext * C, uiBut * but, uiHandleButtonData * data) Line 1063
	at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(1063)
blender.exe!ui_apply_but(bContext * C, uiBlock * block, uiBut * but, uiHandleButtonData * data, const bool interactive) Line 2111
	at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(2111)
blender.exe!button_activate_exit(bContext * C, uiBut * but, uiHandleButtonData * data, const bool mousemove, const bool onfree) Line 8093
	at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(8093)
blender.exe!ui_handle_button_event(bContext * C, const wmEvent * event, uiBut * but) Line 8873
	at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(8873)
blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10729
	at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(10729)
blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 625
	at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(625)
blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2745
	at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(2745)
blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857
	at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(2857)
blender.exe!wm_event_do_handlers(bContext * C) Line 3286
	at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(3286)
blender.exe!WM_main(bContext * C) Line 478
	at D:\dev\blender\blender\source\blender\windowmanager\intern\wm.c(478)
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530
	at D:\dev\blender\blender\source\creator\creator.c(530)
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-02 22:21, hash: `2e52b3206c` Worked: 2.83 Beta **Short description of error** Crash when typing negative numbers. **Exact steps for others to reproduce the error** Open blender. Select Cube. Press `N`. Type -2.3m on any of the location coordinates. = Crash Call Stack: ``` blender.exe!user_string_to_number(bContext * C, const unsigned char * str, const UnitSettings * unit, int type, double * r_value) Line 305 at D:\dev\blender\blender\source\blender\editors\util\numinput.c(305) blender.exe!ui_set_but_string_eval_num_unit(bContext * C, uiBut * but, const unsigned char * str, double * r_value) Line 2818 at D:\dev\blender\blender\source\blender\editors\interface\interface.c(2818) blender.exe!ui_but_string_set_eval_num(bContext * C, uiBut * but, const unsigned char * str, double * r_value) Line 2880 at D:\dev\blender\blender\source\blender\editors\interface\interface.c(2880) blender.exe!ui_but_string_set(bContext * C, uiBut * but, const unsigned char * str) Line 3030 at D:\dev\blender\blender\source\blender\editors\interface\interface.c(3030) blender.exe!ui_apply_but_NUM(bContext * C, uiBut * but, uiHandleButtonData * data) Line 1063 at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(1063) blender.exe!ui_apply_but(bContext * C, uiBlock * block, uiBut * but, uiHandleButtonData * data, const bool interactive) Line 2111 at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(2111) blender.exe!button_activate_exit(bContext * C, uiBut * but, uiHandleButtonData * data, const bool mousemove, const bool onfree) Line 8093 at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(8093) blender.exe!ui_handle_button_event(bContext * C, const wmEvent * event, uiBut * but) Line 8873 at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(8873) blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10729 at D:\dev\blender\blender\source\blender\editors\interface\interface_handlers.c(10729) blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 625 at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(625) blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2745 at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(2745) blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857 at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(2857) blender.exe!wm_event_do_handlers(bContext * C) Line 3286 at D:\dev\blender\blender\source\blender\windowmanager\intern\wm_event_system.c(3286) blender.exe!WM_main(bContext * C) Line 478 at D:\dev\blender\blender\source\blender\windowmanager\intern\wm.c(478) blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 at D:\dev\blender\blender\source\creator\creator.c(530) ```
Author

Added subscriber: @dgsantana

Added subscriber: @dgsantana
Hans Goudey self-assigned this 2020-06-03 02:33:38 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can get this to crash on a debug build with ASAN. Not sure if it crashes in other configurations too.

I can get this to crash on a debug build with ASAN. Not sure if it crashes in other configurations too.

This issue was referenced by a5e9f024f2

This issue was referenced by a5e9f024f21c76fd53c4734f287f043c3bc0beca
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77289
No description provided.